agrego meta tags a index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="imagenes/scout-favicon.png">
 
+    <!-- Primary Meta Tags -->
+    <title>Grupo Scout INDEPENDENCIA</title>
+    <meta name="title" content="Grupo Scout INDEPENDENCIA">
+    <meta name="description" content="G.S. Independencia, Distrito 1 Zona 8">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://valenap.github.io/independencia/">
+    <meta property="og:title" content="Grupo Scout INDEPENDENCIA">
+    <meta property="og:description" content="G.S. Independencia, Distrito 1 Zona 8">
+    <meta property="og:image" content="imagenes/meta-tag.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://valenap.github.io/independencia/">
+    <meta property="twitter:title" content="Grupo Scout INDEPENDENCIA">
+    <meta property="twitter:description" content="G.S. Independencia, Distrito 1 Zona 8">
+    <meta property="twitter:image" content="imagenes/meta-tag.png">
     
 
 
