modifico meta tags de index

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://valenap.github.io/independencia/">
     <meta property="og:title" content="Grupo Scout INDEPENDENCIA">
     <meta property="og:description" content="G.S. Independencia, Distrito 1 Zona 8">
-    <meta property="og:image" content="imagenes/meta-tag.png">
+    <meta property="og:image" content="">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://valenap.github.io/independencia/">
     <meta property="twitter:title" content="Grupo Scout INDEPENDENCIA">
     <meta property="twitter:description" content="G.S. Independencia, Distrito 1 Zona 8">
-    <meta property="twitter:image" content="imagenes/meta-tag.png">
+    <meta property="twitter:image" content="">
     
 
 
