--- a/manada.html
+++ b/manada.html
@@ -31,6 +31,18 @@
     <img class="foto-portada" src="imagenes/portada-rovers.jpeg" alt="Rama Rover">
 </div>
 
+<footer>
+    <div class="footer">
+        <div class="footer-links">
+            <a href="https://www.instagram.com/lainde_scout/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/groups/255340694543479"><i class="fab fa-facebook"></i></a>
+        </div>
+        <div class="footer-copyright">
+            G.S. Independencia <i class="far fa-copyright"></i> 2020 <i class="fas fa-heart"></i>
+        </div>
+    </div>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous">
