modificaciones varias en secciones

--- a/manada.html
+++ b/manada.html
@@ -17,7 +17,7 @@
 </header>
 
 <section>
-    <div style="background-color: #ffbe0b; margin-top: -65px">
+    <div class="banner-ramas" style="background-color: #ffbe0b; margin-top: -65px;">
         <div class="container banner">
             <h1>Manada<br>
                 <strong>...</strong>
@@ -27,14 +27,16 @@
     </div>
 </section>
 
-<div>
+<div class="container">
     <img class="foto-portada" src="imagenes/portada-rovers.jpeg" alt="Rama Rover">
+
+    <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
 </div>
 
 <footer>
     <div class="footer">
         <div class="footer-links">
-            <a href="https://www.instagram.com/lainde_scout/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/lainde_scout/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.facebook.com/groups/255340694543479"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="footer-copyright">
