--- a/caminantes.html
+++ b/caminantes.html
@@ -17,7 +17,7 @@
 </header>
 
 <section>
-    <div style="background-color: #1982c4; margin-top: -65px">
+    <div  class="banner-ramas" style="background-color: #1982c4; margin-top: -65px">
         <div class="container banner">
             <h1>Comunidad de Caminantes<br>
                 <strong>JAIME DE NEVARES</strong>
@@ -29,13 +29,15 @@
 
 <div>
     <img class="foto-portada" src="imagenes/portada-camis.png" alt="Rama Rover">
+
+    <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
 </div>
 
 <footer>
     <div class="footer">
         <div class="footer-links">
-            <a href="https://www.instagram.com/caminantesdelainde/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/groups/255340694543479"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/caminantesdelainde/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/groups/255340694543479" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="footer-copyright">
             G.S. Independencia <i class="far fa-copyright"></i> 2020 <i class="fas fa-heart"></i>
