--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 <footer>
     <div class="footer">
         <div class="footer-links">
-            <a href="https://www.instagram.com/lainde_scout/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/groups/255340694543479"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/lainde_scout/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/groups/255340694543479" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="footer-copyright">
             G.S. Independencia <i class="far fa-copyright"></i> 2020 <i class="fas fa-heart"></i>
