--- a/rovers.html
+++ b/rovers.html
@@ -16,7 +16,7 @@
 </header>
 
 <section>
-    <div style="background-color: #e63946; margin-top: -65px">
+    <div class="banner-ramas" style="background-color: #e63946; margin-top: -65px">
         <div class="container banner">
             <h1>Comunidad Rover<br>
                 <strong>MALVINAS ARGENTINAS</strong>
@@ -29,13 +29,15 @@
 
 <div>
     <img class="foto-portada" src="imagenes/portada-rovers.jpeg" alt="Rama Rover">
+
+    <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
 </div>
 
 <footer>
     <div class="footer">
         <div class="footer-links">
-            <a href="https://www.instagram.com/roversdelainde/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/groups/255340694543479"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/roversdelainde/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/groups/255340694543479" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
         <div class="footer-copyright">
             G.S. Independencia <i class="far fa-copyright"></i> 2020 <i class="fas fa-heart"></i>
