agregados que faltaban

--- a/caminantes.html
+++ b/caminantes.html
@@ -17,7 +17,7 @@
 </header>
 
 <section>
-    <div  class="banner-ramas" style="background-color: #1982c4; margin-top: -65px">
+    <div  class="banner-ramas" style="background-color: #1982c4;">
         <div class="container banner">
             <h1>Comunidad de Caminantes<br>
                 <strong>JAIME DE NEVARES</strong>
@@ -27,8 +27,8 @@
     </div>
 </section>
 
-<div>
-    <img class="foto-portada" src="imagenes/portada-camis.png" alt="Rama Rover">
+<div class="container">
+    <img class="foto-portada" src="imagenes/portada-camis.png" alt="Rama Caminante">
 
     <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
 </div>
