--- a/manada.html
+++ b/manada.html
@@ -17,7 +17,7 @@
 </header>
 
 <section>
-    <div class="banner-ramas" style="background-color: #ffbe0b; margin-top: -65px;">
+    <div class="banner-ramas" style="background-color: #ffbe0b;">
         <div class="container banner">
             <h1>Manada<br>
                 <strong>...</strong>
