--- a/rovers.html
+++ b/rovers.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+
 <header class="d-none d-sm-none d-md-block" style="background-color: #e63946">
     <a href="index.html"><i class="fas fa-chevron-circle-left back"></i></a>
 </header>
@@ -27,7 +28,7 @@
     </div>
 </section>
 
-<div>
+<div class="container">
     <img class="foto-portada" src="imagenes/portada-rovers.jpeg" alt="Rama Rover">
 
     <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
