--- a/unidad.html
+++ b/unidad.html
@@ -27,8 +27,8 @@
     </div>
 </section>
 
-<div>
-    <img class="foto-portada" src="imagenes/portada-unidad.jpg" alt="Rama Rover">
+<div class="container">
+    <img class="foto-portada" src="imagenes/portada-unidad.jpg" alt="Rama Scout">
 
     <h2 class="titulo-cuerpo-portadas">PRÓXIMAMENTE...</h2>
 </div>
