modifico nombre de la comunidad de caminantes

--- a/caminantes.html
+++ b/caminantes.html
@@ -20,7 +20,7 @@
     <div  class="banner-ramas" style="background-color: #1982c4;">
         <div class="container banner">
             <h1>Comunidad de Caminantes<br>
-                <strong>JAIME DE NEVARES</strong>
+                <strong>DAVID BOWIE</strong>
             </h1>
             <p>...</p>
         </div>
